--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -36193,15 +36193,15 @@ min-height: 32px;
 }
 
 
-.r-formbuilder .is-requierd .input-group-text{
+.r-formbuilder__layout .is-requierd .input-group-text{
     border-color: red!important;
     color: red!important;
 
 }
-.r-formbuilder .input-group-text{
+.r-formbuilder__layout .input-group-text{
     padding: 0 .5rem;
 }
-.r-formbuilder .is-requierd .input-group-text:after{
+.r-formbuilder__layout .is-requierd .input-group-text:after{
     content: "*";
     color: red;
     position: absolute;
@@ -36213,12 +36213,12 @@ min-height: 32px;
     border-color: red!important;
 } */
 
-.r-formbuilder input,  .r-formbuilder button, .r-formbuilder select {
+.r-formbuilder__layout input,  .r-formbuilder__layout button, .r-formbuilder__layout select {
     /* direction: rtl; */
     border-radius: 0!important;
     height:unset!important;
 }
-.r-formbuilder textarea{
+.r-formbuilder__layout textarea{
     border-radius: 0!important;
     resize: none;
     max-height: 100%;
@@ -36228,7 +36228,7 @@ min-height: 32px;
     border: 1px solid #eee;
 } */
 
-.r-formbuilder .react-grid-item {
+.r-formbuilder__layout .react-grid-item {
     box-sizing: border-box;
     display: flex;
     align-items: stretch;
@@ -36237,7 +36237,7 @@ min-height: 32px;
     direction: rtl;
 }
 
-.designed .react-grid-item {
+.r-formbuilder__layout.designed .react-grid-item {
     padding: 0 5px;
     border: 0!important;
     transform-style: flat;
@@ -36290,7 +36290,7 @@ z-index: 1;
     cursor: -webkit-grab;
 }
 
-.r-formbuilder .r-formbuilder__layout {
+.r-formbuilder__layout {
     min-height: 90px;
     margin-right:auto;
     margin-left:auto;
@@ -36307,7 +36307,7 @@ z-index: 1;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.2)
 }
 
-.r-formbuilder .hide-button {
+.r-formbuilder__layout .hide-button {
     cursor: pointer;
     position: absolute;
     font-size: 16px;
@@ -36355,7 +36355,7 @@ z-index: 1;
     border-radius: 5px;
 }
 
-.r-formbuilder .droppable-element {
+.r-formbuilder__layout .droppable-element {
     width: 150px;
     background: #ddd;
     border: 1px solid black;
@@ -36363,72 +36363,73 @@ z-index: 1;
     padding: 10px;
 }
 
-.r-formbuilder .input-group {
+.r-formbuilder__layout .input-group {
     position: relative;
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     align-items: stretch;
     width: 100%;
+    direction: rtl;
 }
 
-.r-formbuilder .input-group-append, .r-formbuilder .input-group-prepend {
+.r-formbuilder__layout .input-group-append, .r-formbuilder__layout .input-group-prepend {
     display: flex;
 }
 
-.r-formbuilder .input-group-text {
+.r-formbuilder__layout .input-group-text {
     border-radius: 0!important;
     font-size:unset;
 }
-.r-formbuilder [class*=MuiInput-formControl-]{
+.r-formbuilder__layout [class*=MuiInput-formControl-]{
     height: 100%;
     display: flex;
     align-items: center;
 }
-.r-formbuilder .date-input-with-dialog-main{
+.r-formbuilder__layout .date-input-with-dialog-main{
     display: flex;
     align-items: center;
     min-width: unset;
 }
-.r-formbuilder .date-input-with-dialog-calendar,.r-formbuilder .date-input-with-dialog-empty{
+.r-formbuilder__layout .date-input-with-dialog-calendar,.r-formbuilder__layout .date-input-with-dialog-empty{
 top:50%;
 transform: translateY(-50%)
 }
-.r-formbuilder [class*=MuiInput-input-], .r-formbuilder .date-input-with-dialog-input {
+.r-formbuilder__layout [class*=MuiInput-input-], .r-formbuilder__layout .date-input-with-dialog-input {
     border-radius: 0!important;
 }
 
-.r-formbuilder [class*=MuiInput-input-]:focus {
+.r-formbuilder__layout [class*=MuiInput-input-]:focus {
     outline: none!important;
 }
 
-.r-formbuilder [class*=MuiFormControl-] {
+.r-formbuilder__layout [class*=MuiFormControl-] {
     width: 100%;
     border-radius: 0;
 }
 
-.r-formbuilder [class*=MuiInput-underline-]:before,
-.r-formbuilder [class*=MuiInput-underline-]:after{
+.r-formbuilder__layout [class*=MuiInput-underline-]:before,
+.r-formbuilder__layout [class*=MuiInput-underline-]:after{
     display: none;
 }
 
-.r-formbuilder .JDatePicker{
+.r-formbuilder__layout .JDatePicker{
     width:100%;
 }
 /* .r-formbuilder [class*=MuiFormControl-] div, .r-formbuilder .date-input-with-dialog-main div{
         width: 100%;
     } */
 
-[class*=MuiInput-formControl-] {
+    .r-formbuilder__layout [class*=MuiInput-formControl-] {
     width: 100%;
 }
 
 
-.r-formbuilder [class*=MuiInput-input], .r-formbuilder .date-input-with-dialog-input{
+.r-formbuilder__layout [class*=MuiInput-input], .r-formbuilder__layout .date-input-with-dialog-input{
 padding: 0 .5rem!important;
 }
 
-.r-formbuilder .form-control {
+.r-formbuilder__layout .form-control {
     display: block;
     width: 100%;
     padding: 0 .5rem;
@@ -36442,7 +36443,7 @@ padding: 0 .5rem!important;
     border-radius: 0!important;
 }
 
-.r-formbuilder .input-group>.custom-file, .r-formbuilder .input-group>.custom-select, .r-formbuilder .input-group>.form-control {
+.r-formbuilder__layout .input-group>.custom-file, .r-formbuilder__layout .input-group>.custom-select, .r-formbuilder__layout .input-group>.form-control {
     position: relative;
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
@@ -36451,30 +36452,30 @@ padding: 0 .5rem!important;
     margin-bottom: 0;
 }
 
-.r-formbuilder .form-check {
+.r-formbuilder__layout .form-check {
     position: relative;
     display: flex;
     align-items: center;
     padding-right: 30px;
 }
 
-.r-formbuilder .form-check-input {
+.r-formbuilder__layout .form-check-input {
     position: absolute;
     margin-top: 0;
     margin-right: -25px;
 }
 
-.r-formbuilder .form-check-label {
+.r-formbuilder__layout .form-check-label {
     margin-bottom: 0;
     padding: 0;
 }
 
-.r-formbuilder input[type=checkbox], .r-formbuilder input[type=radio] {
+.r-formbuilder__layout input[type=checkbox], .r-formbuilder__layout input[type=radio] {
     box-sizing: border-box;
     padding: 0;
 }
 
-.r-formbuilder .btn {
+.r-formbuilder__layout .btn {
     display: inline-block;
     font-weight: 400;
     text-align: center;
@@ -36489,24 +36490,24 @@ padding: 0 .5rem!important;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
-.r-formbuilder .btn-primary:not(:disabled):not(.disabled) {
+.r-formbuilder__layout .btn-primary:not(:disabled):not(.disabled) {
     color: #fff;
     background-color: #0062cc;
     border-color: #005cbf;
 }
 
-.r-formbuilder .r-formbuilder__group {
+.r-formbuilder__group {
     width: 100%;
 }
 
-.r-formbuilder .r-formbuilder__group h5 {
+.r-formbuilder__group h5 {
     position: relative;
     /* height: 40px; */
     display: flex;
     align-items: center;
 }
 
-.r-formbuilder .r-formbuilder__group h5::after {
+.r-formbuilder__group h5::after {
     content: "";
     position: absolute;
     right: 0;
@@ -36518,7 +36519,7 @@ padding: 0 .5rem!important;
     transform: translateY(-50%);
 }
 
-.r-formbuilder .r-formbuilder__img {
+.r-formbuilder__img {
     max-height: 100%;
     height: 100%;
     width: 100%;
@@ -36527,17 +36528,16 @@ padding: 0 .5rem!important;
     justify-content: flex-start;
     align-items: center;
 }
-.r-formbuilder .r-formbuilder__img  .input-group-text{
+.r-formbuilder__img  .input-group-text{
     width: 100%;
     display: block;
     position: relative;
 }
-
-.r-formbuilder .r-formbuilder__img input[type="file"] {
+.r-formbuilder__img input[type="file"] {
     display: none;
 }
 
-.r-formbuilder .r-formbuilder__img-holder {
+.r-formbuilder__img-holder {
     width: 100%;
     height: 100%;
     display: flex;
@@ -36549,25 +36549,25 @@ padding: 0 .5rem!important;
     cursor: pointer;
 }
 
-.r-formbuilder .is-requierd .r-formbuilder__img-holder {
+.r-formbuilder__layout .is-requierd .r-formbuilder__img-holder {
     border:1px solid red;
 }
 
-.r-formbuilder .r-formbuilder__img img {
+.r-formbuilder__img img {
     max-height: 100%;
     max-width: 100%;
 }
-.r-formbuilder .r-formbuilder__img .input-group-text{
+.r-formbuilder__img .input-group-text{
     padding: .5rem;
 }
 
 
-.r-formbuilder .is-disabled input,
-.r-formbuilder .is-disabled select,
-.r-formbuilder .is-disabled div{
+.r-formbuilder__layout .is-disabled input,
+.r-formbuilder__layout .is-disabled select,
+.r-formbuilder__layout .is-disabled div{
     pointer-events:none!important;
 }
-.r-formbuilder .is-disabled{
+.r-formbuilder__layout .is-disabled{
     cursor: not-allowed!important;
 }
 
@@ -36602,25 +36602,37 @@ body.print .r-formbuilder__img .btn-danger{
 
 page[layoutsize="A4"][layout="partial"] > .r-formbuilder__layout {  
     width: 21cm!important;
-    height: 29.7cm!important; 
+    max-height: 29.7cm!important; 
+    min-height: 29.7cm!important; 
+    overflow-y: scroll;
   }
   page[layoutsize="A4"][layout="landscape"] > .r-formbuilder__layout {
     width: 29.7cm!important;
-    height: 21cm!important;  
+    max-height: 21cm!important;  
+    min-height: 21cm!important;  
+    overflow-y: scroll;
   }
   page[layoutsize="A3"][layout="partial"] > .r-formbuilder__layout {
     width: 29.7cm!important;
-    height: 42cm!important;
+    max-height: 42cm!important;
+    min-height: 42cm!important;
+    overflow-y: scroll;
   }
   page[layoutsize="A3"][layout="landscape"] > .r-formbuilder__layout {
     width: 42cm!important;
-    height: 29.7cm!important;  
+    max-height: 29.7cm!important;  
+    min-height: 29.7cm!important;  
+    overflow-y: scroll;
   }
   page[layoutsize="A5"][layout="partial"]  > .r-formbuilder__layout{
     width: 14.8cm!important;
-    height: 21cm!important;
+    max-height: 21cm!important;
+    min-height: 21cm!important;
+    overflow-y: scroll;
   }
   page[layoutsize="A5"][layout="landscape"]  > .r-formbuilder__layout{
     width: 21cm!important;
-    height: 14.8cm!important;  
+    max-height: 14.8cm!important;  
+    min-height: 14.8cm!important;  
+    overflow-y: scroll;
   }
